# TraceLink-EDA-Intelligence

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/models/: analysis.py  design.py  simulation.py
docs/: Notes.md
